# statushawk

./: .gitignore  README.md
.github/workflows/: .api-gateway-ci.yml  .backend-ci.yml  .runner-ci.yml
docs/: DEVELOPER_TOOLS.md  FEATURE_TEMPLATE.md  PULL_REQUEST_DESCRIPTION.md  SYSTEM_ARCHITECTURE.md  learned_during_journey.md
docs/services/API GATEWAY/: API_GATEWAY.md
docs/services/API GATEWAY/features/: LOGIN_LOGOUT.md  MONITOR_CRUD_API.md  REVERSE_PROXY.md  SEPARATE_SETTINGS.md  SIGNUP.md
docs/services/INFRASTRUCTURE/: PROJECT_SETUP.md
docs/services/INFRASTRUCTURE/API_GATEWAY/: PIPELINE_SETUP.md  SENTRY_LOGGING_SETUP.md
docs/services/INFRASTRUCTURE/KUBERNETES/: SETUP_HELM_CHART_FOR_API_GATEWAY.md  SETUP_HELM_CHART_FOR_RUNNER.md
docs/services/RUNNER SERVICE/: TASK_SCHEDULING_RUNNER_INTEGRATION.md
infra/charts/api-gateway/: Chart.yaml  values.yaml
infra/charts/api-gateway/templates/: deployment.yaml  migration-job.yaml  postgres-deployment.yaml  postgres-service.yaml
infra/charts/runner/: Chart.yaml  values.yaml
infra/charts/runner/templates/: NOTES.txt  deployment.yaml  httproute.yaml  ingress.yaml  migration-job.yaml  postgres-deployment.yaml  postgres-pvc.yaml  postgres-service.yaml  service.yaml
infra/charts/statushawk/: Chart.yaml  values.yaml
infra/charts/statushawk/templates/: NOTES.txt  _helpers.tpl  api-deployment.yaml  api-ingress.yaml  api-service.yaml  configmap.yaml  migration-job.yaml  notification-deployment.yaml  notification-hpa.yaml  postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml  redis-service.yaml  restore-job.yaml  runner-deployment.yaml  runner-hpa.yaml  secret.yaml  (+1 more)
services/: build-and-push.sh  docker-compose.test.yaml  docker-compose.yaml  new_service.sh  test.sh
services/api-gateway/: .dockerignore  Dockerfile  Dockerfile.dev  mypy.ini  pyproject.toml
services/api-gateway/app/accounts/: admin.py  serializers.py  urls.py  views.py
services/api-gateway/app/accounts/migrations/: 0001_initial.py
services/api-gateway/app/accounts/models/: user_model.py
services/api-gateway/app/accounts/test/: test_login_logout_api.py  test_signup_api.py  test_user_model.py
services/api-gateway/app/common/: utils.py  views.py
services/api-gateway/app/config/: celery.py  settings.py  urls.py
services/api-gateway/app/config/settings/: base.py  local.py  production.py
services/api-gateway/app/monitor/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
services/api-gateway/app/monitor/management/commands/: restore_loops.py  seed_fake_data.py
services/api-gateway/app/monitor/migrations/: 0001_initial.py
services/api-gateway/app/monitor/test/: test_models.py  test_monitor_apis.py
services/api-gateway/app/utils/: logger.py
services/api-gateway/config/: settings.py
services/backend/: Dockerfile  Dockerfile.dev  pyproject.toml
services/backend/app/accounts/: urls.py  views.py
services/backend/app/common/: crud.py  services.py  utils.py
services/backend/app/common/test/: test_crud.py  test_services.py  test_utils.py
services/backend/app/config/: celery.py  urls.py
services/backend/app/config/settings/: base.py
services/backend/app/monitor/: admin.py  crud.py  models.py  serializers.py  services.py  tasks.py  test_anomaly.py  views.py
services/backend/app/monitor/migrations/: 0002_alter_monitor_interval_alter_monitor_url.py  0003_monitorresult.py  0004_monitor_last_checked_at.py  0005_monitorresult_monitor_mon_monitor_048459_idx.py
services/backend/app/monitor/test/: test_anomaly_detection.py  test_anomaly_integration.py  test_crud.py  test_integration.py  test_models.py  test_monitor_apis.py  test_services.py  test_tasks.py
services/backend/app/notifications/: admin.py  crud.py  dtos.py  models.py  providers.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
services/backend/app/notifications/migrations/: 0001_initial.py  0002_alter_notificationchannel_provider.py
services/backend/app/notifications/test/: test_crud.py  test_dtos.py  test_integration.py  test_models.py  test_providers.py  test_services.py  test_tasks.py  test_utils.py
services/backend/app/utils/: logger.py
services/backend/tests/accounts/unit/test_apis/: test_signup_api.py
services/dashboard/: package-lock.json  package.json  tailwind.config.js
services/dashboard/src/: App.tsx  index.css
services/runner/: .flake8  Dockerfile  Dockerfile.dev  mypy.ini  pyproject.toml
services/runner/app/config/: settings.py  test.py  test_config.py
services/scheduler/: Dockerfile.dev  pyproject.toml
services/scheduler/config/: settings.py
(+17 files in other folders)
