[tool.poetry]
name = "backend"
version = "0.11.1"
description = "Backend Service"
package-mode = false
authors = ["Bobur Yusupov <yusufi.bobur@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.12"
django = "^6.0"
django-cors-headers = "^4.9.0"
djangorestframework = "^3.16.1"
psycopg2-binary = "^2.9.11"
pytest-django = "^4.11.1"
gunicorn = "^23.0.0"
whitenoise = "^6.11.0"
httpx = "^0.28.1"
sentry-sdk = {extras = ["django"], version = "^2.47.0"}
celery = {extras = ["redis"], version = "^5.6.2"}
django-celery-results = "^2.6.0"
gevent = "^25.9.1"
faker = "^40.1.0"

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
flake8 = "^7.3.0"
mypy = "^1.19.0"
pytest = "^9.0.1"
drf-spectacular = "^0.29.0"
django-stubs = "^5.2.8"
djangorestframework-stubs = "^3.16.6"
types-requests = "^2.32.4.20250913"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py", "*_test.py"]
pythonpath = ["app"]
addopts = "--import-mode=importlib"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::django.utils.deprecation.RemovedInDjango70Warning",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | __pycache__
  | node_modules
  | tests
)/
'''
