[project]
name = "runner"
version = "0.1.0"
description = "Runner Service"
authors = [
    {name = "Bobur Yusupov",email = "yusufi.bobur@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0,<7.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "django-stubs (>=5.2.8,<6.0.0)",
    "pytest-django (>=4.11.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.19.0,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "drf-spectacular (>=0.29.0,<0.30.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::django.utils.deprecation.RemovedInDjango70Warning",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | migrations
  | __pycache__
  | node_modules
  | tests
)/
'''

